--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,10 +21,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Get dependencies
-        run: go get -v ./...
+        run: go get -v .
 
-      - name: Build
-        run: go build -v ./...
+      - name: Generate .v file
+        run: go run main.go go/constant >coq_translation/Constant.v
 
-      - name: Test
-        run: go test -v ./...
+      - name: Check that the diff is empty
+        run: git -c color.ui=always diff --exit-code
